samples/_failures_safe/1761493133_d9f84f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_594b99df.c: In function ‘main’:
./samples/SAFE/__tmp_594b99df.c:131:5: error: expected declaration or statement at end of input
  131 |     printf("=========================\n");
      |     ^~~~~~
